--- a/app/views/pairs/_form.html.erb
+++ b/app/views/pairs/_form.html.erb
@@ -68,7 +68,7 @@
           </div>
         </div>
       <% else %>
-        <%= link_to "javascript:void(0)", class:"btn disabled-tooltip-wrapper tooltipped", data: { position:"top", tooltip: t('cattery_overview.tooltip.delete_pair_condition') } do %>
+        <%= link_to "javascript:void(0)", class:"btn disabled-tooltip-wrapper tooltipped", data: { position:"bottom", tooltip: t('cattery_overview.tooltip.delete_pair_condition') } do %>
           <button class="btn waves-effect waves-light btn-delete disabled tooltipped">
             <span><%= t('buttons.delete') %></span>
             <i class="material-icons right">delete</i>
