--- a/app/javascript/stylesheets/base/variables.scss
+++ b/app/javascript/stylesheets/base/variables.scss
@@ -1,3 +1,7 @@
+/*********************
+   CUSTOM STYLESHEET 
+*********************/
+
 // Shadows
 $z-depth-1: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 $z-depth-2: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
