--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,5 +1,4 @@
-<!-- Page specific meta data -->
-<% content_for :meta_title, "#{DEFAULT_META["meta_title"]} | #{Breed.find(@cat.breed_id).name} kitten | #{cat_location(@cat)}" %>
+<% content_for :meta_title, "#{DEFAULT_META["meta_title"]} | #{t("breeds.#{Breed.find(@cat.breed_id).breed_code.upcase}.name")} kitten | #{cat_location(@cat)}" %>
 <% content_for :meta_description, t('meta.show_kitten', cat_breed: t("breeds.#{Breed.find(@cat.breed_id).breed_code.upcase}.name"), cat_gender: cat_gender(@cat), cattery: cattery(@cat).cattery_name, cat_birth_date: format_birth_date(@cat), cat_location: cat_location(@cat)) %>
 <% content_for :meta_facebook_image, "#{url_for(@cat.facebook_thumbnail)}" %>
 <% content_for :meta_twitter_image, "#{url_for(@cat.twitter_thumbnail)}" %>
@@ -8,7 +7,7 @@
 <div id="kitten-view" class="container">
   <div class="row">
     <div class="col s12">
-        <h1><%= t("breeds.#{cat_breed(@cat).breed_code}.name") %>&nbsp;<%= t('kitten', count:1).downcase %><h1>
+        <h1><%= t("breeds.#{cat_breed(@cat).breed_code}.name") %> <%= t('kitten', count:1).downcase %><h1>
         <% if @cat.name.present? %>
           <h1 class="cat-name"><%= @cat.name %><h1>
         <% end %>
@@ -48,7 +47,7 @@
             </tr>
           </tbody>
         </table>
-        <div class="row">
+        <div class="row chips-container">
           <div class="chip">
             <% if @cat.is_vaccinated %>
               <span class="material-icons check">check</span>
@@ -87,9 +86,11 @@
           <div class="spinner-layer spinner-teal-only">
             <div class="circle-clipper left">
               <div class="circle"></div>
-            </div><div class="gap-patch">
+            </div>
+            <div class="gap-patch">
               <div class="circle"></div>
-            </div><div class="circle-clipper right">
+            </div>
+            <div class="circle-clipper right">
               <div class="circle"></div>
             </div>
           </div>
